@@ -1,3 +1,4 @@
+- Refactor: Migrated second nationality to Person
 - Refactor: Update dependencies
 
 4.0.7 (08-07-2019)
